Add the main structure

--- a/index.html
+++ b/index.html
@@ -32,15 +32,23 @@
           placeholder="Search for any IP address or domain"
           class="ip-input"
         />
-        <span class="sub-icon">
+        <button class="sub-icon">
           <img src="images/icon-arrow.svg" alt="Arrow icon" />
-        </span>
+        </button>
       </div>
       <div class="details">
-        <div class="ip"><h5>IP address</h5></div>
-        <div class="loc"><h5>Location</h5></div>
-        <div class="timezone"><h5>Timezone</h5></div>
-        <div class="isp"><h5>ISP</h5></div>
+        <div class="ip"><h5>IP address</h5>
+        <p class="ip-show">192.168.174.101</p>
+        </div>
+        <div class="loc"><h5>Location</h5>
+        <p class="loc-show">USA</p>
+        </div>
+        <div class="timezone"><h5>Timezone</h5>
+        <p class="timezone-show">+3:30 GMT</p>
+        </div>
+        <div class="isp"><h5>ISP</h5>
+        <p class="isp-show">AT&T</p>
+        </div>
       </div>
     </header>
     <main class="main">
