Change some typos

--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
       </div>
       <div class="details">
         <div class="ip"><h5>IP address</h5>
-        <p class="ip-show">192.168.174.101</p>
+        <p class="ip-show"></p>
         </div>
         <div class="loc"><h5>Location</h5>
-        <p class="loc-show">USA</p>
+        <p class="loc-show"></p>
         </div>
         <div class="timezone"><h5>Timezone</h5>
-        <p class="timezone-show">+3:30 GMT</p>
+        <p class="timezone-show"></p>
         </div>
         <div class="isp"><h5>ISP</h5>
-        <p class="isp-show">AT&T</p>
+        <p class="isp-show"></p>
         </div>
       </div>
     </header>
